@startuml todo

package "RDB Schema" {

  enum "role" {
    viewer
    editor
  }

  enum "publication_range" {
    only_author
    only_company
  }

  entity "companies" {
    + id : uuid <<PK>>
    ---
    name : varchar
    created_at : date
    updated_at : date
    deleted_at : date
  }

  entity "users" {
    + id : uuid <<PK>>
    ---
    name : varchar
    password : varchar
    role : role
    email : varchar
    # company_id : uuid [FK(companies, id)]
    created_at : date
    updated_at : date
    deleted_at : date
  }

  entity "task_status" {
    + id : uuid <<PK>>
    ---
    name : varchar
    company_id : uuid [FK(companies, id)]
    created_at : date
    updated_at : date
    deleted_at : date
  }

  entity "tasks" {
    + id : uuid <<PK>>
    ---
    due : date
    title : varchar
    description : varchar
    # company_id : uuid [FK(companies, id)]
    # author_id : uuid [FK(users, id)]
    # status_id : uuid [FK(task_status, id)]
    # assignee_id : uuid [FK(users, id)]
    publication_range : publication_range
    created_at : date
    updated_at : date
    deleted_at : date
  }

  users }o--|| companies
  tasks }o--|| companies
  tasks }o--|| task_status
  users ||--o{ tasks
  task_assignments }o--|| users
  task_assignments }o--|| tasks
}

@enduml
